# AncillaryNews

./: .env.example  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  README.md  conftest.py  docker-compose.yml  pyproject.toml  struktur.md
.claude/agents/: checker.md  mechanic.md  researcher.md
.github/workflows/: ci.yml
docs/: bess-cooptimizer-design.md  bess-cooptimizer-results.md  dataset-catalogue-addendum.md  dataset-catalogue.md  forecast-allocation-design.md  forecast-baseline-design.md  forecast-baseline-results.md  forecast-datasets-scope.md  forecast-day-ahead-design.md  forecast-day-ahead-results.md  forecast-economic-eval-design.md  forecast-economic-eval-results.md  forecast-feature-store-design.md  forecast-model-design.md  forecast-model-results.md  supply-event-features-design.md  supply-event-features-results.md
grafana/dashboards/: ancillarynews.json
init-db/: 01-init.sql  02-event-reports.sql  03-triggers.sql  04-bess-simulations.sql  05-morning-briefs.sql  06-bess-afrr-activation.sql  07-bess-capacity-currency.sql  08-market-events.sql
prometheus/: prometheus.yml
scripts/: backfill_history.py  generate_baseline_report.py  generate_cooptimizer_ab_report.py  generate_day_ahead_forecast_report.py  generate_economic_eval_report.py  generate_forecast_report.py  migrate.py  restart-shared-services.sh  validate_datasets.py
services/api/: Dockerfile  main.py
services/crawler/: Dockerfile  main.py
services/ingestor/: Dockerfile  main.py
services/orchestrator/: Dockerfile  main.py
shared/: article_extractor.py  backfill.py  base_ingestor.py  baselines.py  bess_dispatch_milp.py  bess_estimator.py  bess_simulator.py  claim_extractor.py  dataset_validation.py  datasets.py  db_manager.py  economic_eval.py  email_notifier.py  event_extractor.py  event_synthesizer.py  feature_store.py  forecast_model.py  forecast_synthesizer.py  linkedin_embed.py  llm_json.py  logging_config.py  metrics.py  morning_brief_editor.py  price_recap_synthesizer.py  rss_feeds.py  rss_reader.py  rule_engine.py  slack_notifier.py  units.py  vector_store.py
tests/: test_api_main.py  test_article_extractor.py  test_backfill.py  test_backfill_history.py  test_base_ingestor.py  test_baselines.py  test_bess_dispatch_milp.py  test_bess_estimator.py  test_bess_simulator.py  test_claim_extractor.py  test_crawler_main.py  test_dataset_validation.py  test_datasets.py  test_day_ahead_target.py  test_db_manager.py  test_economic_eval.py  test_email_notifier.py  test_event_extractor.py  test_event_synthesizer.py  test_feature_store.py  test_forecast_model.py  test_forecast_synthesizer.py  test_linkedin_embed.py  test_llm_json.py  test_logging_config.py  test_main.py  test_migrate.py  test_morning_brief_editor.py  test_orchestrator_main.py  test_price_recap_synthesizer.py  test_rss_reader.py  test_rule_engine.py  test_slack_notifier.py  test_units.py  test_vector_store.py
(+15 files in other folders)
